--- a/public/css/naked.css
+++ b/public/css/naked.css
@@ -11,27 +11,43 @@
 	-webkit-transition: opacity .25s ease-in-out;
 }
 
-.nav-bar:hover{
+.nav-bar:hover {
 	opacity: 0.9 !important;
 }
 
-.carousel {
-  min-height: 500px;
-  margin-bottom: 60px;
+#post {
+	padding-top: 50px;
+	margin-right: 200px;
+	margin-left: 200px;
 }
 
-.carousel-caption {
-  z-index: 10;
+#messager {
+	position: absolute;
+	/*height: 100%;*/
+	width: 100%;
+	height: 50px;
+	background-color: rgba(255, 255, 255, 0.2);
+	z-index: 1000;
+	font-size: large;
+	color: white;
+	text-align: center;
+	vertical-align: middle;
 }
 
-.carousel .item {
-  min-height: 500px;
-  background-color: #777;
+.danger {
+	background-color: #a94442;
+	padding: 14px;
+	height: 50px;
 }
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 500px;
+
+.success {
+	background-color: #3c763d;
+	height: 50px;
+	padding: 14px;
+}
+
+.info {
+	background-color: #31708f;
+	height: 50px;
+	padding: 14px;
 }
