add post page hover effect

--- a/public/css/naked.css
+++ b/public/css/naked.css
@@ -16,9 +16,16 @@
 }
 
 #post {
-	padding-top: 50px;
-	margin-right: 200px;
-	margin-left: 200px;
+	padding-top: 5%;
+	padding-left: 3%;
+	padding-right: 3%;
+	position: absolute;
+	left: 12%;
+	right: 12%;
+	height: 100%;
+	transition: transform .25s ease-in-out;
+	-moz-transition: transform .25s ease-in-out;
+	-webkit-transition: transform .25s ease-in-out;
 }
 
 #messager {
@@ -50,4 +57,32 @@
 	background-color: #31708f;
 	height: 50px;
 	padding: 14px;
+}
+
+.left-nav {
+	left: 0;
+	right: auto;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 10%;
+}
+
+.right-nav {
+	right: 0;
+	left: auto;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 10%;
+}
+
+.next-post {
+	transform: scale(0.9) translateX(-7.6%);
+	box-shadow: 0px 0px 10px 1px silver;
+}
+
+.pre-post {
+	transform: scale(0.9) translateX(3.8%);
+	box-shadow: 0px 0px 10px 1px silver;
 }
